# blur_Images_api

./: README.md  pyproject.toml
Streamlit/: front_api.py  front_api_local.py  pyproject.toml  requirements.txt
Streamlit/.streamlit/: config.toml
blur_faces/: Dockerfile  lamb_func.py
tests/: blur_face_image.py
